--- a/web/index.html
+++ b/web/index.html
@@ -13,6 +13,7 @@
     <!-- JavaScript -->
     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+    <script src="index.js" defer></script>
     <title>Sample</title>
   </head>
 
